--- a/serverless.yml
+++ b/serverless.yml
@@ -53,7 +53,10 @@ layers:
 
 custom:
   serverless-offline:
-    httpPort: 3002
+    httpPort: 3001
+    lambdaPort: 3101
+  stepFunctionOffline:
+
   vpc:
     prod:
       securityGroupIds:
