--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "bcryptjs": "^2.4.3",
     "handlebars": "^4.7.7",
     "jsonwebtoken": "^8.5.1",
+    "libphonenumber-js": "^1.10.26",
     "moment": "^2.29.4",
     "mongoose": "^6.5.2",
     "passport": "^0.6.0"
