--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "typescript": "^4.7.4"
   },
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.321.1",
     "ajv": "^8.11.2",
     "ajv-formats": "^2.1.1",
     "bcryptjs": "^2.4.3",
